# aws-connections-lib

./: Cargo.toml  README.md
src/: client_error.rs  cloudwatch.rs  cost_explorer.rs  datapipelines.rs  ec2.rs  emr.rs  es.rs  kinesis.rs  lambda.rs  lib.rs  rds.rs  route53.rs  s3.rs  secrets_manager.rs  sns.rs  sqs.rs
