[package]
name = "aws-connections-lib"
version = "0.0.3"
edition = "2018"

[dependencies]
rusoto_ce = "0.45.0"
rusoto_cloudwatch = "0.45.0"
rusoto_core = "0.45.0"
rusoto_credential = "0.45.0"
rusoto_datapipeline = "0.45.0"
rusoto_emr = "0.45.0"
rusoto_ec2 = "0.45.0"
rusoto_es = "0.45.0"
rusoto_kinesis = "0.45.0"
rusoto_lambda = "0.45.0"
rusoto_rds = "0.45.0"
rusoto_route53 = "0.45.0"
rusoto_s3 = "0.45.0"
rusoto_secretsmanager = "0.45.0"
rusoto_sns = "0.45.0"
rusoto_sqs = "0.45.0"
